# saas-core-platform

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  OPERATIONS.md  README.md  bump_version.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260326_0001_create_tenants.py  20260326_0002_create_users_organizations_memberships.py  20260326_0003_create_plans_and_subscriptions.py  20260326_0004_create_usage_and_update_plan_limits.py  20260326_0005_create_notifications.py  20260326_0006_add_user_auth_fields.py  20260327_0007_create_billing_event_ledger.py  20260327_0008_add_usage_counter_period_start.py  20260327_0009_create_auth_sessions.py  20260327_0010_create_admin_auth_tables.py  20260327_0011_create_auth_magic_links.py  20260327_0012_add_admin_roles_and_seed_superadmin.py  20260327_0013_add_tenant_deleted_at.py
app/: main.py
app/api/: dependencies.py  router.py
app/config/: settings.py
app/core/: paths.py
app/db/: models.py  session.py
app/middleware/: tenant_context.py
app/web/: admin_workspaces.py  router.py
deployment/nginx/: app.conf  nginx.conf
deployment/systemd/: saas_api.service  saas_scheduler.service  (+1 more)
scripts/: bootstrap_local_data.py  bootstrap_python.sh  bootstrap_ubuntu.sh  bootstrap_validation_data.sh  deploy_production.sh  init_local_db.sh  init_production_db.sh  member_seat_race_probe.py  ops_status.sh  render_deployment.py  run_scheduler.sh  service_runner.py  test_auto_recovery.sh  validate_production.sh  verify_local.sh
worker/: celery_app.py  dispatch.py  scheduler.py  tasks.py
(+65 files in other folders)
